gobmkida/c3/add_false_eye
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/add_false_eye/src/engine/optics.c:1907:12: error: expected expression
*( _OWORD *)( p_defense_point - 6) = *( _OWORD *)&v5->color; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/add_false_eye/src/engine/optics.c:1907:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( p_defense_point - 6) = *( _OWORD *)&v5->color; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/add_false_eye/src/engine/optics.c:1907:49: error: expected expression
*( _OWORD *)( p_defense_point - 6) = *( _OWORD *)&v5->color; 
                                                ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/add_false_eye/src/engine/optics.c:1907:41: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( p_defense_point - 6) = *( _OWORD *)&v5->color; 
                                        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/add_false_eye/src/engine/optics.c:1908:33: error: operand of type 'struct eyevalue' where arithmetic or pointer type is required
*( p_defense_point - 2) = ( int)v5->value; 
                                ^~~~~~~~~
5 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/add_false_eye/src/obj/1/optics.o] Error 1
